@@ -21,6 +21,7 @@ description = 'Indexing/Query time integration with LLM'
 
 dependencies {
   compileOnly libs.stephenc.jcip.annotations
+  implementation platform(project(':platform'))
   implementation project(':solr:core')
   implementation project(':solr:solrj')
 
@@ -38,4 +39,10 @@ dependencies {
   testImplementation libs.junit.junit
   testImplementation libs.commonsio.commonsio
   
+}
+
+// langchain4j has reflection issues, and requires the following permissions
+// https://docs.gradle.org/current/userguide/upgrading_version_7.html#removes_implicit_add_opens_for_test_workers
+tasks.withType(Test).configureEach {
+  jvmArgs(["--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"])
 }
